--- a/preview.html
+++ b/preview.html
@@ -12,7 +12,7 @@
 
   <div align="center">
     <img
-      src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=22&pause=1000&color=36BCF7&center=true&vCenter=true&width=800&lines=Senior+Software+Engineer+%40+LambdaTest;4%2B+years+building+scalable+distributed+systems;Passionate+about+Cloud+%2C+DevOps+%26+System+Design;IIIT+Allahabad+Alumni+%7C+Open+to+collaborations"
+      src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=22&pause=1000&color=36BCF7&center=true&vCenter=true&width=800&lines=Senior+Software+Engineer+%40+LambdaTest;4%2B+years+building+scalable+distributed+systems;Passionate+about+Cloud+%2C+DevOps+%26+System+Design;IIIT+Allahabad+Alumni+%7C"
       alt="About Me" />
   </div>
 
